--- a/Users/Users.v1.yaml
+++ b/Users/Users.v1.yaml
@@ -241,6 +241,7 @@ paths:
           type: string
         name: scope
         in: path
+        description: 'Scope, if left empty will return all scopes'
 components:
   schemas:
     User:
